# Kurosaki-Devin

./: README.md  app.py  報告書.md  報告用.md
backend/: .env.example  database.py  main.py  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  repository.py  sqlserver_db.py  sqlserver_repository.py
docs/: report.docx
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  TransferOrderList.tsx  api.ts  types.ts
templates/: index.html
